--- a/app/config/local/main.ini
+++ b/app/config/local/main.ini
@@ -4,7 +4,7 @@ modelsDir      	= "../app/models/"
 viewsDir       	= "../app/views/"
 librariesDir   	= "../app/libraries/"
 debug			= 0
-url				= "http://upanh.clan.local/"
+url				= "http://upanh.banghiep.com/"
 
 [database]
 host     		= "localhost"
@@ -16,8 +16,8 @@ dbname   		= "p_img"
 key	   			= "d1012ed893f409458877dffde54577b7"
 
 [session]
-session_name 	 = 'clanimg'
-uniqueId		 = 'clanimg'
+session_name 	 = 'bnimg'
+uniqueId		 = 'bnimg'
 default_lifetime = 0
 default_path  	 = '/'
-default_domain   = '.clan.local'
+default_domain   = '.banghiep.com'
