--- a/app/config/production/main.ini
+++ b/app/config/production/main.ini
@@ -4,20 +4,20 @@ modelsDir      	= "../app/models/"
 viewsDir       	= "../app/views/"
 librariesDir   	= "../app/libraries/"
 debug			= 0
-url				= "http://upanh.clan.vn/"
+url				= "http://upanh.banghiep.com/"
 
 [database]
 host     		= "10.0.0.156"
-username 		= "clanmaster"
-password 		= "clanmaster@#$1234"
-dbname   		= "clan_img"
+username 		= "banghiep_web"
+password 		= "banghiep@1234"
+dbname   		= "banghiep_img"
 
 [crypt]
 key	   			= "d1012ed893f409458877dffde54577b7"
 
 [session]
-session_name 	 = 'clanimg'
-uniqueId		 = 'clanimg'
+session_name 	 = 'bnimg'
+uniqueId		 = 'bnimg'
 default_lifetime = 0
 default_path  	 = '/'
-default_domain   = '.clan.vn'
+default_domain   = '.banghiep.com'
